--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "mongoose": "^4.13.5"
+    "mongoose": "^4.13.5",
+    "ws": "^3.3.2"
   }
 }
